fix image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -42,11 +42,12 @@ body {
   
   #home > div:nth-child(2) {
     background-size: contain !important;
-    background-position: center !important;
+    background-position: center 40% !important;
     height: 400px !important;
   }
   
   #home > div:nth-child(3) {
     height: 400px !important;
+    padding-bottom: 2rem !important;
   }
 }
